cmake_minimum_required(VERSION 3.6)
project(chukanova2_0)

add_subdirectory("k-d_tree")
add_subdirectory("max_tree")
add_subdirectory("sum_tree")
add_subdirectory("RBTree")
add_subdirectory("monte_carlo_kd")
add_subdirectory("merge_sotr")
add_subdirectory("elem_in_tree")
add_subdirectory("vector")
add_subdirectory("list")
add_subdirectory("list_2")
add_subdirectory("list_2_cpp")
add_subdirectory("dir_copy")
add_subdirectory("determinant")
add_subdirectory("aeroport")
set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES main.cpp)
add_executable(chukanova2_0 ${SOURCE_FILES})